# fluid

./: .env.example  .gitleaks.toml  CHANGELOG.md  PROJECT_STRUCTURE.md  package-lock.json  package.json
.github/workflows/: server-signing-benchmark.yml
admin-dashboard/: env.example  package-lock.json  package.json
admin-dashboard/app/: globals.css
admin-dashboard/app/admin/dashboard/: page.tsx
admin-dashboard/app/admin/webhooks/: page.tsx
admin-dashboard/components/: Navbar.tsx
admin-dashboard/components/dashboard/: types.ts
admin-dashboard/components/developer-portal/: DeveloperPortalLanding.tsx
client/: README.md  package-lock.json  package.json
client/src/: FluidClient.ts  index.ts
fluid-server/: Cargo.toml
fluid-server/src/: config.rs  lib.rs  main.rs  state.rs  xdr.rs
server/: .env.example  README.md  dev.db  package-lock.json  package.json
server/prisma/: schema.prisma
server/src/: config.ts  index.ts  test-alert.ts
server/src/errors/: AppError.ts
server/src/handlers/: adminApiKeys.ts  adminSubscriptionTiers.ts  feeBump.ts
server/src/schemas/: feeBump.ts
server/src/services/: alertService.test.ts  alertService.ts  anomalyDetection.ts  auditLogger.test.ts  auditLogger.ts  registrationService.ts  twilioNotifier.test.ts  twilioNotifier.ts  webhook.ts
server/src/utils/: db.ts
server/src/workers/: ledgerMonitor.ts  transactionStore.ts
