[package]
name = "fluid-server"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust backend for Fluid (Stellar fee-bump relay)"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
stellar-xdr = { version = "22", features = ["curr"] }
base64 = "0.22"
